# CS236_FinalProj

./: AdditionAutomata.cpp  AdditionAutomata.h  CMakeLists.txt  CommaAutomaton.cpp  CommentAutomaton.h  Database.h  DatalogProgram.cpp  FactsAutomaton.cpp  FactsAutomaton.h  Header.cpp  IdentifierAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  QueriesAutomaton.cpp  README.md  RightParenthesesAutomaton.cpp  Rule.cpp  Rule.h  RulesAutomaton.cpp  SchemesAutomaton.cpp  StringAutomata.cpp  StringAutomata.h  Token.h  Tuple.cpp  main.cpp
Automata/: AdditionAutomata.cpp  AdditionAutomata.h  Automaton.h  ColonAutomaton.cpp  ColonAutomaton.h  ColonDashAutomaton.cpp  ColonDashAutomaton.h  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  IdentifierAutomaton.cpp  IdentifierAutomaton.h  LeftParenthesesAutomaton.cpp  LeftParenthesesAutomaton.h  MultiplyAutomata.cpp  MultiplyAutomata.h  PeriodAutomaton.cpp  PeriodAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  QuestionAutomata.cpp  QuestionAutomata.h  RightParenthesesAutomaton.cpp  RightParenthesesAutomaton.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomata.cpp  StringAutomata.h
Datalog/: DatalogProgram.cpp  DatalogProgram.h
Structures/: Database.cpp  Database.h  Header.cpp  Header.h  Parameter.cpp  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  Tuple.cpp
Token/: Token.cpp
interpreter/: Database.cpp  Database.h  Header.cpp  Header.h  Interpreter.cpp  Interpreter.h
lexer/: Lexer.h  (+22 more)
(+10 files in other folders)
